<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item
        android:id="@+id/navigation_home"
        android:icon="@drawable/ic_home"
        android:title="@string/title_home" />

    <item
        android:id="@+id/navigation_activity"
        android:icon="@drawable/ic_activity"
        android:title="@string/title_activity" />

    <item
        android:id="@+id/navigation_add"
        android:icon="@drawable/ic_add"
        android:title="Add" />

    <item
        android:id="@+id/navigation_budget"
        android:icon="@drawable/ic_budget"
        android:title="@string/title_budget" />

    <item
        android:id="@+id/navigation_settings"
        android:icon="@drawable/ic_settings"
        android:title="@string/title_settings" />
</menu> 