<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@id/navigation_home">

    <fragment
        android:id="@+id/navigation_home"
        android:name="com.example.trackerfinance.ui.home.HomeFragment"
        android:label="@string/title_home"
        tools:layout="@layout/fragment_home">
        <action
            android:id="@+id/action_navigation_home_to_navigation_add"
            app:destination="@id/navigation_add"
            app:enterAnim="@anim/slide_in_right"
            app:exitAnim="@anim/slide_out_left"
            app:popEnterAnim="@anim/slide_in_left"
            app:popExitAnim="@anim/slide_out_right" />
    </fragment>

    <fragment
        android:id="@+id/navigation_activity"
        android:name="com.example.trackerfinance.ui.activity.ActivityFragment"
        android:label="@string/title_activity"
        tools:layout="@layout/fragment_activity">
        <action
            android:id="@+id/action_navigation_activity_to_navigation_add"
            app:destination="@id/navigation_add"
            app:enterAnim="@anim/slide_in_right"
            app:exitAnim="@anim/slide_out_left"
            app:popEnterAnim="@anim/slide_in_left"
            app:popExitAnim="@anim/slide_out_right">
            <argument
                android:name="transaction"
                app:argType="com.example.trackerfinance.data.Transaction" />
        </action>
    </fragment>

    <fragment
        android:id="@+id/navigation_add"
        android:name="com.example.trackerfinance.ui.transaction.AddTransactionFragment"
        android:label="@string/add_transaction"
        tools:layout="@layout/fragment_add_transaction" />

    <fragment
        android:id="@+id/navigation_budget"
        android:name="com.example.trackerfinance.ui.budget.BudgetFragment"
        android:label="@string/title_budget"
        tools:layout="@layout/fragment_budget">
        <action
            android:id="@+id/action_navigation_budget_to_navigation_add"
            app:destination="@id/navigation_add"
            app:enterAnim="@anim/slide_in_right"
            app:exitAnim="@anim/slide_out_left"
            app:popEnterAnim="@anim/slide_in_left"
            app:popExitAnim="@anim/slide_out_right" />
    </fragment>

    <fragment
        android:id="@+id/navigation_settings"
        android:name="com.example.trackerfinance.ui.settings.SettingsFragment"
        android:label="@string/title_settings"
        tools:layout="@layout/fragment_settings">
        <action
            android:id="@+id/action_navigation_settings_to_navigation_add"
            app:destination="@id/navigation_add"
            app:enterAnim="@anim/slide_in_right"
            app:exitAnim="@anim/slide_out_left"
            app:popEnterAnim="@anim/slide_in_left"
            app:popExitAnim="@anim/slide_out_right" />
    </fragment>

</navigation> 